Improved landscape UI and fixed Google Analytics ID.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="txt_share_email_subject">Our topic later</string>
     <string name="btn_txt_about">About</string>
     <string name="txt_about">App base from the design of keikun17\'s Newfad Generator.
-        \nApp\'s source - to be published on Github.
+        \nApp\'s source - available at Github.
         \n\nOmatt
     </string>
     <string name="txt_about_close">Close</string>
